@@ -1,3 +1,8 @@
+2008-08-29  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* flumotion/monitor/nagios/main.py:
+	  Fix comment.
+
 2008-08-28  Johan Dahlin  <johan@flumotion.com>
 
 	* flumotion/component/bouncers/Makefile.am (component_DATA): Remove
